wait also waits for error;
